# DartPose-AI

./: .gitignore  CLAUDE.md  GEMINI.md  HARDWARE_INTERFACE.md  Implementation Plan.md  ML_MIGRATION_ROADMAP.md  README.md  darts_architecture_spec.md  feedback.md  find_throws3.py  handoff.md  pyproject.toml  skills-lock.json  url2mp4.py
darts-ios/DartPoseTests/: RegressionTests.swift
scripts/: extract_midframes.py
src/: config.py  main.py  models.py
src/hardware/: serial_receiver.py
src/llm/: feedback_generator.py
src/utils/: regression_exporter.py  video_utils.py
src/vision/: advanced_engine.py  dart_analyzer.py  debug_plotter.py  mediapipe_pose.py  metrics_calculator.py  phase_detector.py  pose_normalizer.py  rule_engine.py  throw_segmenter.py  trajectory_renderer.py  yolo_pose.py
tests/: ground_truth.yaml  test_dart_analyzer.py  test_regression.py  test_rule_engine.py
tools/: sync_config.py
