[project]
name = "darts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grep>=0.3.2",
    "mediapipe==0.10.14",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.21",
    "yt-dlp>=2026.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
